force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>프로젝트</label>
    <nameField>
        <label>프로젝트명</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>프로젝트</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>