force-app/main/default/objects/Project__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>종료일자</label>
    <type>Date</type>
</CustomField>