force-app/main/default/objects/Project__c/fields/IndustryType__c.field-meta.xml
<CustomField>
    <fullName>IndustryType__c</fullName>
    <label>산업분류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>기술</fullName>
            </value>
            <value>
                <fullName>제조</fullName>
            </value>
            <value>
                <fullName>미디어</fullName>
            </value>
            <value>
                <fullName>제약</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>