force-app/main/default/objects/Project__c/fields/LastExpenseDate__c.field-meta.xml
<CustomField>
    <fullName>LastExpenseDate__c</fullName>
    <label>최근경비사용일</label>
    <type>Date</type>
</CustomField>