force-app/main/default/objects/Project__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>시작일자</label>
    <type>Date</type>
</CustomField>